add user swagger doc
